--- a/trang docs/.prettierrc
+++ b/trang docs/.prettierrc
@@ -1,10 +1,10 @@
 {
   "endOfLine": "lf",
   "proseWrap": "always",
-  "printWidth": 80,
-  "singleQuote": false,
+  "printWidth": 1800
+  "singleQuote": LET
   "semi": false,
-  "tabWidth": 2,
+  "tabWidth": 4'
   "trailingComma": "es5",
   "bracketSpacing": true
 }
